# siaa-genai-template

./: 404.html  README.md  cookiecutter.json  index.html  mkdocs.yml  requirements-docs.txt  sitemap.xml
{{cookiecutter.project_slug}}/: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  {% if cookiecutter.use_mkdocs == 'y' %}mkdocs.yml{% endif %}
{{cookiecutter.project_slug}}/.github/workflows/: ci.yml
{{cookiecutter.project_slug}}/src/{{ cookiecutter.package_name }}/: app.py  llm.py  schemas.py
{{cookiecutter.project_slug}}/src/{{ cookiecutter.package_name }}/{% if cookiecutter.agent_framework != 'none' %}agents{% endif %}/: {% if cookiecutter.agent_framework != 'none' %}crew.py{% endif %}  {% if cookiecutter.agent_framework != 'none' %}tasks.py{% endif %}
{{cookiecutter.project_slug}}/src/{{ cookiecutter.package_name }}/{% if cookiecutter.llm_framework != 'none' %}agents{% endif %}/: {% if cookiecutter.agent_framework != 'none' %}tasks.py{% endif %}  {% if cookiecutter.llm_framework != 'none' %}crew.py{% endif %}
{{cookiecutter.project_slug}}/src/{{ cookiecutter.package_name }}/{% if cookiecutter.use_rag == 'y' %}rag{% endif %}/: {% if cookiecutter.use_rag == 'y' %}embeddings.py{% endif %}  {% if cookiecutter.use_rag == 'y' %}retriever.py{% endif %}  (+1 more)
{{cookiecutter.project_slug}}/{% if cookiecutter.use_hydra == 'y' %}config{% endif %}/: {% if cookiecutter.use_hydra == 'y' %}config.yaml{% endif %}
{{cookiecutter.project_slug}}/{% if cookiecutter.use_mkdocs == 'y' %}docs{% endif %}/: {% if cookiecutter.use_mkdocs == 'y' %}index.md{% endif %}
(+32 files in other folders)
